# sequenceDiagram

src/SequenceDiagram_brijesh/: README.md  pyproject.toml  sequenceDiagram.py
