[project]
name = "SequenceDiagram_brijesh"
version = "0.0.1"
authors = [
  { name="Brijesh Kulkarni", email="author@example.com" },
]
description = "library to generate seqeuence diagram for python code"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/brijeshkulkarni/sequenceDiagram"
Issues = "https://github.com/brijeshkulkarni/sequenceDiagram/issues"